get correct rect for web plugin container

DocumentToFrame does not return the expected values if the
WebPluginContainer is inside the iframe.
After that CL DocumentToFrame() will be called from root_view.

Bug: 907026
Change-Id: I87cbd03eb3d077d2e16a1e4c2997bbae78163daa
Reviewed-on: https://chromium-review.googlesource.com/c/1349219
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612112}
Former-commit-id: 2d7893628c34823f6ac9743c10d88a2573582a38